[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sandbox-macros = { path = "../sandbox-macros", optional = true }

[features]
default = []
switch = ["dep:sandbox-macros"]
env-flag = []
